# TTT

./: Dockerfile  README.md  app.json  config.py  pyproject.toml  requirements.txt
.github/workflows/: github-actions-demo.yml
ZeMusic/: __init__.py  __main__.py
ZeMusic/core/: G.py  call.py  rd.py  userbot.py
ZeMusic/plugins/Managed/: Aaa.py  Bot.py  Chatgpt.py  G.py  Googel.py  Gpt.py  Insta.py  Rad.py  Telegraph.py  YtVideo.py  maro.py  tiktok.py  المساعد.py  انضمام المطور.py  انظم&غادر.py  تفعيل مغادرة.py  دخول.py  رد تلقائي.py  قاعدة.py  من بالمكالمة.py  همسه.py
ZeMusic/plugins/misc/: autoleave.py
ZeMusic/plugins/play/: A.py  Aaaaaa.py  Abbbbbb.py  Ashtrak.py  Download.py  Img.py  Logs.py  Pytube.py  Sound.py  Youtub.py  developers.py  devm.py  download.py  play ch.py  play.py  rd.py  انشائي.py  ترحيب.py  سجل الجروبات.py  كيبورد.py
ZeMusic/utils/: database.py  thumbnails.py
ZeMusic/utils/database /: __init__.py  memorydatabase.py
ZeMusic/utils/decorators/: play.py
ZeMusic/utils/inline/: play.py
ZeMusic/utils/stream/: autoclear.py  stream.py
cookies/: 2.txt  False.txt  True.txt  a.txt  b.txt  tanjiro.txt
strings/langs/: en.yml
